[package]
name = "bwterraingen-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bwterraingen = { git = "https://github.com/zzlk/bwterraingen.git" }

#image = { version = "*", features = ["png", "webp"] }
rand = { version = "*" }
getrandom = { version = "0.2", features = ["js"] }
cached = "*"

anyhow = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["registry", "env-filter"] }
tracing-log = "*"

[dev-dependencies]
quickcheck = "*"
quickcheck_macros = "*"
