[package]
name = "bwterraingen-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
bwterraingen = { git = "https://github.com/zzlk/bwterraingen" }

#image = { version = "*", features = ["png", "webp"] }
rand = { version = "*" }
getrandom = { version = "0.2", features = ["js"] }

anyhow = "*"
tracing = "*"
tracing-subscriber = { version = "*", default-features = false, features = ["fmt", "registry", "env-filter"] }
tracing-log = "*"

serde = "*"
serde_json = "*"

[dev-dependencies]
